objects/CIP_History_Funding__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Specifics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History Funding</relationshipLabel>
        <relationshipName>CIP_History_Funding</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change_to_an_alternative_funding_account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change to an alternative funding account</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobra_Bill_go_to_Group_or_Cobra_TPA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Bill go to Group or COBRA TPA?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobra_Premium_paid_by_Group_or_TPA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Premium paid by Group or TPA?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobra_TPA_using_non_BC_Enrollment_Form__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA TPA using non BC Enrollment Form?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_allowance_for_Marketing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Communication allowance for Marketing?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_require_different_contacts_at_the__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Different contacts at suffix level?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Please_explain_contact_Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, Please explain:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>More_th__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>More Than One Bill Entity?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments Reinsurance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Carrier_NameContact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinsurance Carrier Name/Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Carrier_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinsurance Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City Reinsurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinsurance Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Reinsurance</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reinsurance_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Reinsurance</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address Reinsurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code Reinsurance</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Client Intake Processs</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Funded_with_Reinsurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Self-Funded with Reinsurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments Stop Loss</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Carrier_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Loss Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City Stop Loss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Stop Loss</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Plan_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Loss Plan Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Stop Loss</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address Stop Loss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code Stop Loss</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TPA Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Washout_Code_16__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Washout Code = 16</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Washout_Code_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Washout Code = 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Washout_Code_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Washout Code = 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_premium_be_received_from_more_than__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Premiums Recd From More Than one Source</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>include_HCID_on_the_invoice_West_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Include HCID# on the invoice? (West/WGS)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>CIP History Funding</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History Funding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>